Ask Zara html and css updated

--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
     </div>
     <!-- Nav -->
     <nav class="main-nav">
-      <h1>Ask Zara</h1>
+      <img class="askzara-logo" href="#" src="./assets/askzaralogo.png" />
       <ul class="main-menu">
         <li class="home"><a href="#">Home</a></li>
         <li><a href="#">About Us</a></li>
         <li><a href="#">Resources</a></li>
         <li><a href="#">Live Chat</a></li>
         <li><a href="#">Therapist & Doctor</a></li>
+        <li><a href="#">Support Group</a></li>
       </ul>
       <ul class="right-menu">
-        <button class="support-group-btn" href="#">Support Group</button>
-        <li><a href="#">Sign Up</a></li>
-        <li><a href="#">Login</a></li>
+        <button class="login" href="#">Login</button>
+        <button class="sign-up" href="#">Sign Up</button>
       </ul>
     </nav>
     <div class="container">
@@ -45,7 +45,10 @@
         <!-- Hero -->
         <div class="hero">
           <div class="hero-content">
-            <span>Get the support you need</span>
+            <span
+              ><i class="fa-solid fa-heart-circle-check"></i> Get the support
+              you need</span
+            >
             <h2>Your Safe Space for Mental Health Support</h2>
             <p>
               Ask Zara is here to support your well-being, offering a
@@ -122,7 +125,7 @@
         <div class="home-page-live-chat">
           <div class="home-page-live-chat-container">
             <div class="home-page-live-chat-heading">
-              <span>Live Chat</span>
+              <span><span class="dash">—</span> Live Chat</span>
               <h3>Feel Seen, Heard, and Understood</h3>
               <p>
                 Sometimes, expressing how you feel can make all the difference.
@@ -186,7 +189,7 @@
         <div class="home-page-resources">
           <div class="home-page-resources-content">
             <div class="home-page-resources-heading">
-              <span>Resources</span>
+              <span><span class="dash">—</span> Resources</span>
               <h3>Explore Helpful Reads & Tips</h3>
               <p>
                 Our Resources section is packed with articles, tips, and guides
@@ -195,15 +198,9 @@
                 well-being.
               </p>
             </div>
-            <div class="home-page-resources-see-more-articles">
-              <span>Featured Articles:</span>
-              <button>
-                See More Articles <i class="fa-solid fa-angle-right"></i>
-              </button>
-            </div>
             <div class="home-page-resources-featured-article-container">
               <div class="home-page-resources-featured-article">
-                <img src="./assets/stress.jpg" />
+                <img src="Images/stress.jpg" />
                 <div class="home-page-resources-featured-article-meta">
                   <h4>
                     All You Need To Know About Coping with Academic Stress
@@ -216,7 +213,7 @@
                 </div>
               </div>
               <div class="home-page-resources-featured-article">
-                <img src="./assets/habit.jpg" />
+                <img src="Images/habit.jpg" />
                 <div class="home-page-resources-featured-article-meta">
                   <h4>Building Healthy Habits for Student Life</h4>
                   <p>
@@ -228,7 +225,7 @@
                 </div>
               </div>
               <div class="home-page-resources-featured-article">
-                <img src="./assets/anxiety.jpg" />
+                <img src="Images/anxiety.jpg" />
                 <div class="home-page-resources-featured-article-meta">
                   <h4>Understanding Anxiety: Signs and Solutions</h4>
                   <p>
@@ -239,7 +236,7 @@
                 </div>
               </div>
               <div class="home-page-resources-featured-article">
-                <img src="./assets/selfcare.jpg" />
+                <img src="Images/selfcare.jpg" />
                 <div class="home-page-resources-featured-article-meta">
                   <h4>The Importance of Self-Care for Students</h4>
                   <p>
@@ -251,6 +248,11 @@
                 </div>
               </div>
             </div>
+            <div class="home-page-resources-see-more-articles">
+              <button>
+                See More Articles <i class="fa-solid fa-angle-right"></i>
+              </button>
+            </div>
           </div>
         </div>
         <!-- Home Page Therapists and Doctors -->
@@ -258,7 +260,7 @@
           <div class="home-page-therapists-and-support">
             <div class="home-page-therapists-container">
               <div class="home-page-therapists-heading">
-                <span>Therapists and Doctors</span>
+                <span><span class="dash">—</span> Therapists and Doctors</span>
                 <h3>Meet Trusted Professionals, Ready to Help</h3>
               </div>
 
@@ -289,11 +291,11 @@
             </div>
             <div class="home-page-support-group-container">
               <div class="home-page-support-group-heading">
-                <span>Support Group Community</span>
+                <span><span class="dash">—</span> Support Group Community</span>
                 <h3>Connect with Peers in a Safe Space</h3>
               </div>
               <div class="home-page-support-group-content">
-                <img src="./assets/support-group.jpg" />
+                <img src="Images/support-group.jpg" />
                 <p>
                   Our support group is a welcoming community where students can
                   connect, share experiences, and support each other. Whether
@@ -311,7 +313,7 @@
         <div class="what-people-are-saying">
           <div class="what-people-are-saying-content">
             <div class="what-people-are-saying-heading">
-              <span>Honest Feedback</span>
+              <span><span class="dash">—</span> Honest Feedback</span>
               <h3>What People Are Saying</h3>
               <p>
                 At Ask Zara, we believe that every voice matters. Discover how
@@ -321,7 +323,7 @@
             </div>
             <div class="what-people-are-saying-card">
               <div class="what-people-are-saying-review">
-                <img src="./assets/review1.jpg" />
+                <img src="Images/review1.jpg" />
                 <h4>Tayo</h4>
                 <div class="what-people-are-saying-star">
                   <i class="fa-solid fa-star"></i>
@@ -338,7 +340,7 @@
                 </p>
               </div>
               <div class="what-people-are-saying-review">
-                <img src="./assets/review3.jpg" />
+                <img src="Images/review3.jpg" />
                 <h4>Chidimma</h4>
                 <div class="what-people-are-saying-star">
                   <i class="fa-solid fa-star"></i>
@@ -356,7 +358,7 @@
                 </p>
               </div>
               <div class="what-people-are-saying-review">
-                <img src="./assets/review2.jpg" />
+                <img src="Images/review2.jpg" />
                 <h4>Emmanuel</h4>
                 <div class="what-people-are-saying-star">
                   <i class="fa-solid fa-star"></i>
@@ -373,7 +375,7 @@
                 </p>
               </div>
               <div class="what-people-are-saying-review">
-                <img src="./assets/review4.jpg" />
+                <img src="Images/review4.jpg" />
                 <h4>Adetunji</h4>
                 <div class="what-people-are-saying-star">
                   <i class="fa-solid fa-star"></i>
@@ -390,7 +392,7 @@
                 </p>
               </div>
               <div class="what-people-are-saying-review">
-                <img src="./assets/review6.jpg" />
+                <img src="Images/review6.jpg" />
                 <h4>Hammed</h4>
                 <div class="what-people-are-saying-star">
                   <i class="fa-solid fa-star"></i>
@@ -407,7 +409,7 @@
                 </p>
               </div>
               <div class="what-people-are-saying-review">
-                <img src="./assets/review5.jpg" />
+                <img src="Images/review5.jpg" />
                 <h4>Omotola</h4>
                 <div class="what-people-are-saying-star">
                   <i class="fa-solid fa-star"></i>
@@ -440,8 +442,8 @@
               we’re ready to be your partner in well-being.
             </p>
             <div class="home-page-signup-login-button">
-              <button>Login</button>
-              <button class="home-page-signup-sign-up-button">Sign Up</button>
+              <button class="home-page-login-button">Login</button>
+              <button class="home-page-sign-up-button">Sign Up</button>
             </div>
           </div>
         </div>
@@ -449,18 +451,18 @@
         <footer class="footer">
           <div class="footer-inner">
             <div class="footer-quote">
-              <h3>Ask Zara</h3>
+              <img class="askzara-logo" href="#" src="Images/askzaralogo.png" />
               <p>One conversation can make all the difference. Ask Zara Now!</p>
               <div class="follow-us">
                 <p>Follow Us on Social Media:</p>
                 <a href="https://facebook.com">
-                  <img src="./assets/facebooklogo.png" alt="Facebook" />
+                  <img src="images/facebooklogo.png" alt="Facebook" />
                 </a>
                 <a href="https://linkedin.com">
-                  <img src="./assets/instalogo.png" alt="Linkedin" />
+                  <img src="images/instalogo.png" alt="Linkedin" />
                 </a>
                 <a href="https://twitter.com">
-                  <img src="./assets/xtwitter.png" alt="X" />
+                  <img src="images/xtwitter.png" alt="X" />
                 </a>
               </div>
             </div>
@@ -499,8 +501,8 @@
                   <button>Subscribe Now</button>
                 </div>
               </div>
+              <p class="copyright">© 2024 Ask Zara. All rights reserved.</p>
             </div>
-            <p>© 2024 Ask Zara. All rights reserved.</p>
           </div>
         </footer>
       </section>
