--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             </div>
             <div class="home-page-resources-featured-article-container">
               <div class="home-page-resources-featured-article">
-                <img src="Images/stress.jpg" />
+                <img src="./assets/stress.jpg" />
                 <div class="home-page-resources-featured-article-meta">
                   <h4>
                     All You Need To Know About Coping with Academic Stress
@@ -213,7 +213,7 @@
                 </div>
               </div>
               <div class="home-page-resources-featured-article">
-                <img src="Images/habit.jpg" />
+                <img src="./assets/habit.jpg" />
                 <div class="home-page-resources-featured-article-meta">
                   <h4>Building Healthy Habits for Student Life</h4>
                   <p>
@@ -225,7 +225,7 @@
                 </div>
               </div>
               <div class="home-page-resources-featured-article">
-                <img src="Images/anxiety.jpg" />
+                <img src="./assets/anxiety.jpg" />
                 <div class="home-page-resources-featured-article-meta">
                   <h4>Understanding Anxiety: Signs and Solutions</h4>
                   <p>
@@ -236,7 +236,7 @@
                 </div>
               </div>
               <div class="home-page-resources-featured-article">
-                <img src="Images/selfcare.jpg" />
+                <img src="./assets/selfcare.jpg" />
                 <div class="home-page-resources-featured-article-meta">
                   <h4>The Importance of Self-Care for Students</h4>
                   <p>
@@ -295,7 +295,7 @@
                 <h3>Connect with Peers in a Safe Space</h3>
               </div>
               <div class="home-page-support-group-content">
-                <img src="Images/support-group.jpg" />
+                <img src="./assets/support-group.jpg" />
                 <p>
                   Our support group is a welcoming community where students can
                   connect, share experiences, and support each other. Whether
@@ -323,7 +323,7 @@
             </div>
             <div class="what-people-are-saying-card">
               <div class="what-people-are-saying-review">
-                <img src="Images/review1.jpg" />
+                <img src="./assets/review1.jpg" />
                 <h4>Tayo</h4>
                 <div class="what-people-are-saying-star">
                   <i class="fa-solid fa-star"></i>
@@ -340,7 +340,7 @@
                 </p>
               </div>
               <div class="what-people-are-saying-review">
-                <img src="Images/review3.jpg" />
+                <img src="./assets/review3.jpg" />
                 <h4>Chidimma</h4>
                 <div class="what-people-are-saying-star">
                   <i class="fa-solid fa-star"></i>
@@ -358,7 +358,7 @@
                 </p>
               </div>
               <div class="what-people-are-saying-review">
-                <img src="Images/review2.jpg" />
+                <img src="./assets/review2.jpg" />
                 <h4>Emmanuel</h4>
                 <div class="what-people-are-saying-star">
                   <i class="fa-solid fa-star"></i>
@@ -375,7 +375,7 @@
                 </p>
               </div>
               <div class="what-people-are-saying-review">
-                <img src="Images/review4.jpg" />
+                <img src="./assets/review4.jpg" />
                 <h4>Adetunji</h4>
                 <div class="what-people-are-saying-star">
                   <i class="fa-solid fa-star"></i>
@@ -392,7 +392,7 @@
                 </p>
               </div>
               <div class="what-people-are-saying-review">
-                <img src="Images/review6.jpg" />
+                <img src="./assets/review6.jpg" />
                 <h4>Hammed</h4>
                 <div class="what-people-are-saying-star">
                   <i class="fa-solid fa-star"></i>
@@ -409,7 +409,7 @@
                 </p>
               </div>
               <div class="what-people-are-saying-review">
-                <img src="Images/review5.jpg" />
+                <img src="./assets/review5.jpg" />
                 <h4>Omotola</h4>
                 <div class="what-people-are-saying-star">
                   <i class="fa-solid fa-star"></i>
@@ -451,18 +451,22 @@
         <footer class="footer">
           <div class="footer-inner">
             <div class="footer-quote">
-              <img class="askzara-logo" href="#" src="Images/askzaralogo.png" />
+              <img
+                class="askzara-logo"
+                href="#"
+                src="./assetsaskzaralogo.png"
+              />
               <p>One conversation can make all the difference. Ask Zara Now!</p>
               <div class="follow-us">
                 <p>Follow Us on Social Media:</p>
                 <a href="https://facebook.com">
-                  <img src="images/facebooklogo.png" alt="Facebook" />
+                  <img src="./assets/facebooklogo.png" alt="Facebook" />
                 </a>
                 <a href="https://linkedin.com">
-                  <img src="images/instalogo.png" alt="Linkedin" />
+                  <img src="./assets/instalogo.png" alt="Linkedin" />
                 </a>
                 <a href="https://twitter.com">
-                  <img src="images/xtwitter.png" alt="X" />
+                  <img src="./assets/xtwitter.png" alt="X" />
                 </a>
               </div>
             </div>
