--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
               <img
                 class="askzara-logo"
                 href="#"
-                src="./assetsaskzaralogo.png"
+                src="./assets/askzaralogo.png"
               />
               <p>One conversation can make all the difference. Ask Zara Now!</p>
               <div class="follow-us">
